@@ -1,3 +1,3 @@
 DIST code2color-0.2 200711 SHA256 2365c9009b1cc3c30430b88775ec402164df105fd12364871d05dcaed20be954 SHA512 c0ab9f411d5a106c81334343e3c4a63b67d27b95e2d128145e3ac1ee46cd6c228c61796cf96e51826e69b3e465e7bdaa81b1a48cad934c23b310f2ea2ebd8e75 WHIRLPOOL d0207e84a5849c554b1dfc5882ab46d8afc411c7d26e912235ec05565880e6ed0db8449133502234a01ae8f59feae211486b6a523e37859d8404f72fff9b8f93
-DIST less-462.tar.gz 312028 SHA256 eaa42a9265f9b69254fd2c3ac24f5efd49abfb4bcc90f6e7a448b799fd8f65cf SHA512 296eece68fae780121e631caca66a31b54da5b170bfac6c9e08ad88ccf7df3a873e87ddedb7cfc9371d5d760e6f7499a391461743c4d26ea9e130a9068b1fda4 WHIRLPOOL 6ae644b4e727da25c7292b95f6997b8d8f103432d0ac1f92bb38ebe17c59ac73ba39a4e8d658b347baf9cae55690153583963e5741963346f527445f53eddc41
-DIST less-select-2.5.tar.gz 25924 SHA256 0eed27e847f2ebf264a7251443b9ef7eca920deb030c9496bc6cb21d59292243 SHA512 ca410586eacaa61694517ea66a8839a1d536680f77b73f31d3163eeacaf20fdf130f081e86496afb859a133d100c52e6a8cb16682667addb06ec096078dc3ecd WHIRLPOOL 37766257e8c51a805801a14f524973d82ebaa0c47feaa35365b5899b4d837db372d114adc310be1eb29d1774a4b7de54f1b752a26abd0a76d076e511219301af
+DIST less-466.tar.gz 315462 SHA256 8305f5a06764ff094ed3428f94f29059541e2483eae201991f90823da6557212 SHA512 12f732ac37ba78e6df97d9674f42e00c6dcae74fdbf225c387542ab64f1613d09b7373097ac6ff1b598c02cbfaa8f5816dd2df5c6ed2d14d347c78994d89e4d4 WHIRLPOOL e91ba7d3b9175bd44f6787af50b9f2543e30ff385e6d390cc79f545591692811a88f319c88f364d72a4b5d9d814e53eab444c20624a58007661644b6a67f6490
+DIST less-select-2.6.tar.gz 26354 SHA256 df4ab8f17568cabd864358e5f0a765241f586b8c30341116a649db91db9048bf SHA512 d674e2bcbda2155bd3da862452a78f8aa410661b887ab1c28ac2b338bd602335bbaaebf4daaf3eba120400b2d58244c98e5a96d4d2c7b74fb5b12e2210dbb00d WHIRLPOOL 04a2df34bb0daf0b86044f887bf10a6af9d941314028b052f5dfe7c0dbd4e74ecb69f88eaf8c24dbad446e8de1bcc81401118df04e186887eba126362bbb32d5
