@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mv_perl-2.35 (03 Sep 2014)
+
+  03 Sep 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *mv_perl-2.34 (30 Aug 2014)
 
   30 Aug 2014; Martin Väth <martin@mvath.de>:
